# mimg

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mimg.h  runtests.sh
examples/: mimg_add.c  mimg_and.c  mimg_convert_grayscale.c  mimg_diff_directional_sharpen.c  mimg_div.c  mimg_edges.c  mimg_laplacian_sharpen.c  mimg_linspace.c  mimg_logarithmic_bin_quantize.c  mimg_logspace.c  mimg_mask_quantize.c  mimg_mean_filter.c  mimg_median.c  mimg_median_filter.c  mimg_mul.c  mimg_not.c  mimg_or.c  mimg_random_range_test.c  mimg_rnd_mask_quantize.c  mimg_saltpepper.c  mimg_sub.c  mimg_threshold_quantize.c  mimg_uniform_bin_quantize.c
lib/: cauldron_random.h  stb_image.h
